<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tourlosm.home.automation.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Switch
        android:id="@+id/heaterSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heater_label"
        android:layout_below="@+id/section_label"
        android:layout_alignParentStart="true" />

    <Switch
        android:id="@+id/livingRoomLightSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/living_room_light_label"
        android:layout_below="@+id/kitchenLightSwitch"
        android:layout_alignParentStart="true" />

    <Switch
        android:id="@+id/kitchenLightSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kitchen_light_label"
        android:layout_below="@+id/alarmSwitch"
        android:layout_alignParentStart="true" />

    <Switch
        android:id="@+id/alarmSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_label"
        android:layout_below="@+id/heaterSwitch"
        android:layout_alignParentStart="true" />

</RelativeLayout>
