<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.fragments.SectionsPagerAdapter">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/connection_status" />

        <TextView
            android:id="@+id/connection_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/disconnected"
            android:textColor="@color/colorError"/>
   </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1"
        android:paddingTop="10dp">

        <!-- LIVING ROOM SECTION -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/living_room_label"
            android:textAlignment="center"
            android:padding="5dip"
            android:textSize="30sp"/>

        <!-- LIVING ROOM LABELS SECTION -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/livingRoomLightLabel"
                android:text="@string/light_label"
                android:textAlignment="center"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/livingRoomMotionDetectorLabel"
                android:text="@string/motion_detector_label"
                android:textAlignment="center"
                android:layout_column="1"/>

        </TableRow>

        <!-- LIVING ROOM STATUS SECTION -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/livingRoomLightStatus"
                android:text="false"
                android:textAlignment="center"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/livingRoomMotionDetectorStatus"
                android:text="false"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>

        <!-- KITCHEN ROOM SECTION -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kitchen_room_label"
            android:textAlignment="center"
            android:padding="5dip"
            android:textSize="30sp"/>

        <!-- KITCHEN ROOM LABELS SECTION -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/kitchenRoomLightLabel"
                android:text="@string/light_label"
                android:textAlignment="center"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/kitchenRoomMotionDetectorStatusLabel"
                android:text="@string/motion_detector_label"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>

        <!-- KITCHEN ROOM STATUS SECTION -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/kitchenRoomLightStatus"
                android:text="false"
                android:textAlignment="center"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/kitchenRoomMotionDetectorStatus"
                android:text="false"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>

        <!-- BEDROOM SECTION -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bedroom_label"
            android:textAlignment="center"
            android:padding="5dip"
            android:textSize="30sp"/>

        <!-- BEDROOM LABELS SECTION -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bedroomLightLabel"
                android:text="@string/light_label"
                android:textAlignment="center"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/bedroomMotionDetectorStatusLabel"
                android:text="@string/motion_detector_label"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>

        <!-- BEDROOM STATUS SECTION -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bedroomLightStatus"
                android:text="@string/not_available"
                android:textAlignment="center"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/bedroomMotionDetectorStatus"
                android:text="false"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>

        <!-- HEATER SECTION -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heater_label"
            android:textAlignment="center"
            android:padding="5dip"
            android:textSize="30sp"/>

        <!-- HEATER LABELS SECTION -->

        <TextView
            android:id="@+id/heaterStatusLabel"
            android:text="@string/status_label"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/heaterStatus"
            android:text="false"
            android:textAlignment="center" />

        <!-- ALARM SECTION -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_label"
            android:textAlignment="center"
            android:padding="5dip"
            android:textSize="30sp"/>

        <!-- ALARM LABELS SECTION -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/alarmArmedLabel"
                android:text="@string/armed_label"
                android:textAlignment="center"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/alarmIntruderLabel"
                android:text="@string/active_label"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>

        <!-- ALARM STATUS SECTION -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/alarmArmedStatus"
                android:text="false"
                android:textAlignment="center"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/alarmIntruderStatus"
                android:text="false"
                android:textAlignment="center"
                android:layout_column="1"/>
        </TableRow>

    </TableLayout>


</RelativeLayout>
